badges routes
